--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><title>React App</title><script defer="defer" src="/static/js/main.1bbc56c1.js"></script><link href="/static/css/main.93515405.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head><link rel="stylesheet" href="/index.61d3354a.css">
+  <meta charset="utf-8">
+  <link rel="icon" href="/favicon.824cf0c5.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="theme-color" content="#000000">
+  <title>Document</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="/index.2d3ace14.js" defer=""></script>
+</body>
+
+</html>
